# figma-sync

./: Cargo.toml
src/: main.rs
